@@ -8,6 +8,8 @@
 
 namespace {
 
+config::child_list empty_traits;
+
 void add_prefixes(const wide_string& str, size_t length, markov_prefix_map& res)
 {
 	for(size_t i = 0; i <= str.size(); ++i) {
@@ -93,12 +95,12 @@ wide_string markov_generate_name(const markov_prefix_map& prefixes, size_t chain
 
 }
 
-unit_race::unit_race() : ntraits_(0), chain_size_(0), not_living_(false)
+unit_race::unit_race() : ntraits_(0), chain_size_(0), not_living_(false), traits_(&empty_traits)
 {
 }
 
 unit_race::unit_race(const config& cfg) : name_(cfg["name"]), ntraits_(atoi(cfg["num_traits"].c_str())),
-                                          not_living_(cfg["not_living"] == "yes")
+                                          not_living_(cfg["not_living"] == "yes"), traits_(&cfg.get_children("trait"))
 {
 	names_[MALE] = utils::split(cfg["male_names"]);
 	names_[FEMALE] = utils::split(cfg["female_names"]);
@@ -116,6 +118,11 @@ const std::string& unit_race::name() const { return name_; }
 std::string unit_race::generate_name(unit_race::GENDER gender) const
 {
 	return wstring_to_string(markov_generate_name(next_[gender],chain_size_,12));
+}
+
+const config::child_list& unit_race::additional_traits() const
+{
+	return *traits_;
 }
 
 int unit_race::num_traits() const { return ntraits_; }
