@@ -1,4 +1,6 @@
 CVS HEAD:
+ * made 'loyal' a trait which is only given to units explicitly by the scenario designer
+ * added the 'dextrous' trait and applied it to Elves
  * language and i18n
   * new translation: Estonian
   * updated translations: Dutch, French, German, Hungarian, Portuguese (Brazilian), Russian, Slovenian, Spanish
